# best

./: .bazelrc  .clang-format  BUILD  LICENSE.inc  MODULE.bazel  README.md  bazel  format.sh
.github/workflows/: bazel.yml
best/base/: BUILD  access.h  fwd.h  guard.h  hint.h  macro.h  niche.h  ord.h  ord_test.cc  port.h  tags.h  unsafe.h
best/cli/: BUILD  app.cc  app.h  cli.cc  cli.h  cli_test.cc  parser.cc  parser.h  toy.cc  toy_flags.h
best/container/: BUILD  bag.h  bag_test.cc  bounds.cc  bounds.h  bounds_test.cc  box.h  box_test.cc  choice.h  choice_test.cc  object.h  object_test.cc  option.h  option_test.cc  pun.h  pun_test.cc  result.h  result_test.cc  row.h  row_test.cc  span.h  span_sort.h  span_test.cc  vec.h  vec_test.cc
best/func/: BUILD  arrow.h  call.h  defer.h  defer_test.cc  dyn.h  dyn_test.cc  fn.h  fn_test.cc  fnref.h  fnref_test.cc  tap.h  tap_test.cc
best/io/: BUILD  errnos.inc  errnos.py  ioerr.cc  ioerr.h  path.h  path_test.cc
best/iter/: BUILD  bounds.cc  bounds.h  bounds_test.cc  iter.h  iter_test.cc
best/log/: BUILD  location.h  location_test.cc  wtf.h
best/math/: BUILD  bit.h  bit_test.cc  conv.h  conv_test.cc  int.h  int_test.cc  overflow.h  overflow_test.cc
best/memory/: BUILD  allocator.cc  allocator.h  bytes.cc  bytes.h  bytes_test.cc  dyn.h  dyn_test.cc  layout.h  layout_test.cc  ptr.h  ptr_test.cc  span.h  span_sort.h  span_test.cc
best/meta/: BUILD  bit_enum.h  concepts.h  ebo.h  empty.h  guard.h  init.h  init_test.cc  names.h  names_test.cc  ops.h  reflect.h  reflect_test.cc  tags.h  taxonomy.h  tlist.h  tlist_test.cc  (+1 more)
(+86 files in other folders)
